# stock_check

./: .gitignore  README.md  debug_yf.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: __init__.py  agent.py  analysis.py  holdings.py
backend/app/routers/: __init__.py  agent.py  holdings.py  scheduler.py  stocks.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/services/: __init__.py  earnings_collector.py  holdings_fetcher.py  llm_agent.py  news_collector.py  performance_analyzer.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: SearchBar.jsx  StockChart.jsx
frontend/src/components/dashboard/: AgentSummary.jsx  EarningsCalendar.jsx  FluctuationAlerts.jsx  HoldingsTable.jsx  NewsPanel.jsx  SchedulerControl.jsx  index.js
frontend/src/hooks/: useAgent.js  usePolling.js
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx
frontend/src/services/: api.js
